tdf#123189 DOCX import: skip table bkground color

settings to keep interoperability, use only cell
properties, as MSO.

Change-Id: I167eb0e8732fa7dc7f890c2a21d59a15299be8ba
Reviewed-on: https://gerrit.libreoffice.org/67429
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>